# branches

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: bench.rs
examples/: instantiate_all.rs
src/: lib.rs  test.rs
tests/: default.rs  prefetch.rs
