[package]
name = "branches"
version = "0.1.2"
edition = "2018"
authors = ["Khashayar Fereidani"]
description = "Branch hinting prediction and control functions for stable Rust including likely, unlikely, assume and abort to help algorithm optimization"
repository = "https://github.com/fereidani/branches"
documentation = "https://docs.rs/branches"
keywords = ["branch", "likely", "unlikely", "no_std", "optimization"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"
