[package]
name = "branches"
version = "0.4.1"
edition = "2018"
authors = ["Khashayar Fereidani"]
description = "Branch hinting prediction and control functions for stable Rust including likely, unlikely, assume and abort, plus read and write cpu prefetch functions to help algorithm optimization"
repository = "https://github.com/fereidani/branches"
documentation = "https://docs.rs/branches"
keywords = ["branch", "likely", "unlikely", "no_std", "optimization"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"

[features]
default = ["std", "prefetch"]
std = []
prefetch = []

[build-dependencies]
rustc_version = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(branches_stable)',
    'cfg(branches_nightly)',
    'cfg(rustc_ge_1_81_0)',
] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench"
harness = false
